--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,12 @@ h2 {
   margin: 0.1rem;
 }
 
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
+
 /* carousel */
 .carousel-item-next,
 .carousel-item-prev,
